# MouseBrainVisualizeProject

./: CMakeLists.txt  README.MD
apps/: CMakeLists.txt
apps/LargeVolumeSliceVis/: CMakeLists.txt  main.cpp
apps/LargeVolumeVis/: CMakeLists.txt  main.cpp
mrayns/: CMakeLists.txt  Config.hpp
mrayns/algorithm/: ColorMapping.hpp  GPUTaskScheduleHelper.hpp  GeometryHelper.hpp  RenderHelper.hpp  SliceHelper.cpp  SliceHelper.hpp  VolumeHelper.hpp
mrayns/common/: Define.hpp  Hash.hpp  Image.cpp  Image.hpp  KDTree.hpp  LRU.hpp  Logger.hpp  MathTypes.hpp  Parrallel.hpp
mrayns/core/: BlockVolumeManager.cpp  BlockVolumeManager.hpp  Framebuffer.hpp  GPUNode.cpp  GPUNode.hpp  GPUResource.cpp  GPUResource.hpp  HostNode.cpp  HostNode.hpp  PageTable.cpp  PageTable.hpp  Renderer.hpp  Slice.hpp  SliceRenderer.cpp  Volume.hpp  VolumeBlockTree.cpp  VolumeBlockTree.hpp  VolumeRenderer.cpp
mrayns/core/internal/: Common.hpp  VulkanSliceRenderer.cpp  VulkanSliceRenderer.hpp  VulkanUtil.cpp  VulkanUtil.hpp  VulkanVolumeRenderer.cpp  VulkanVolumeRenderer.hpp  VulkanVolumeRendererExt.cpp  VulkanVolumeRendererExt.hpp
mrayns/extension/: VolumeBlockProviderInterface.hpp
mrayns/geometry/: Camera.hpp  Frustum.hpp  Mesh.hpp  Plane.hpp
mrayns/plugin/: Library.cpp  Library.hpp  LibraryReposity.cpp  LibraryReposity.hpp  Plugin.hpp  PluginDefine.hpp  PluginLoader.cpp  PluginLoader.hpp
mrayns/utils/: Timer.hpp
plugins/: CMakeLists.txt
plugins/H264VolumeBlockProvider/: .gitignore  CMakeLists.txt  VolumeBlockProvider.cpp  VolumeBlockProvider.hpp
plugins/H264VolumeBlockProvider/src/: VolumeBlockProvider.cpp  VolumeBlockProvider.hpp
shaders/: slice_render.frag  slice_render.frag.spv  slice_render.vert  slice_render.vert.spv  volume_renderPass_shading.frag  volume_renderPass_shading.frag.spv  volume_render_pos.frag  volume_render_pos.frag.spv  volume_render_pos.vert  volume_render_pos.vert.spv  volume_render_shading.frag  volume_render_shading.frag.spv  volume_render_shading.vert
tests/: CMakeLists.txt
tests/TestH264VolumeBlockProvider/: CMakeLists.txt  TestH264VolumeBlockProvider.cpp
tests/TestVolumeBlockEqual/: CMakeLists.txt  TestVolumeBlockEqual.cpp
